--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Vírus e Hacking</title>
 </head>
 <body>
-    <header class="header">
+    <header class="banner">
         <h1>Vírus e Hacking</h1>
         <nav>
           <ul>
@@ -19,7 +19,17 @@
         </nav>
       </header>
       <main>
-        <p>Escrever sobre o vpirus e hacks.</p>
+
+        <section class="conteudo">
+          <h2>titulo</h2>
+          <p>conteudo</p>
+        </section>
+
       </main>
+
+      <footer class="rodape">
+        <p>footer blaah</p>
+      </footer>
+
 </body>
 </html>
