--- a/oquesao.html
+++ b/oquesao.html
@@ -7,7 +7,7 @@
     <title>Vírus e Hacking</title>
 </head>
 <body>
-    <header>
+    <header class="banner">
         <h1>Vírus e Hacking</h1>
         <nav>
           <ul>
@@ -19,7 +19,7 @@
         </nav>
       </header>
       <main>
-        <p>Escrever sobre o vpirus e hacks.</p>
+        <p>Escrever sobre o virus e hacks.</p>
       </main>
 </body>
 </html>
