--- a/oquesao.html
+++ b/oquesao.html
@@ -19,7 +19,17 @@
         </nav>
       </header>
       <main>
-        <p>Escrever sobre o virus e hacks.</p>
+
+        <section class="conteudo">
+          <h2>titulo</h2>
+          <p>conteudo</p>
+        </section>
+
       </main>
+
+      <footer class="rodape">
+        <p>footer blaah</p>
+      </footer>
+
 </body>
 </html>
