--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Vírus e Hacking</title>
     <link rel="stylesheet" href="geral.css">
 </head>
-<body>
+<body class="index">
     <header class="banner">
         <h1>Vírus e Hacking</h1>
         <nav>
@@ -22,8 +22,10 @@
       <main>
 
         <section class="conteudo">
-          <h2>titulo</h2>
-          <p>conteudo</p>
+          <h2>Introdução</h2>
+          <p>Com a era da tecnologia que vem aumentando é praticamente impossível não ter contato com algum tipo de aparelho eletrônico, principalmente com a pandemia forçando o trabalho remoto e aulas virtuais em pessoas não tão familiares com a internet, devido a isso os percentuais de cibercrimes tem aumentado drasticamente em pouco tempo.
+            Mas afinal o que é um vírus?
+          </p>
         </section>
 
       </main>
