--- a/oquesao.html
+++ b/oquesao.html
@@ -22,8 +22,9 @@
       <main>
 
         <section class="conteudo">
-          <h2>titulo</h2>
-          <p>conteudo</p>
+          <h2>O que são?</h2>
+          <p>Os vírus são programas de computador maliciosos que se propagam por meio de arquivos infectados, causando danos ao sistema infectado e potencialmente se espalhando para outros dispositivos. Por outro lado, o hacking refere-se à prática de explorar vulnerabilidades em sistemas de computador para acessar informações ou controlar o sistema de maneira não autorizada.
+            Embora existam muitas diferenças entre esses dois conceitos, eles estão intimamente relacionados na medida em que os hackers frequentemente usam vírus e outros tipos de malware para infectar sistemas e obter acesso não autorizado. O hacking pode ser realizado por várias razões, desde fins maliciosos, como roubo de dados ou danos a sistemas, até para fins de pesquisa de segurança ou testes de penetração. Em todos os casos, é essencial estar ciente das ameaças representadas pelos vírus e hackers e tomar medidas para proteger sistemas e informações importantes.</p>
         </section>
 
       </main>
