--- a/tipos.html
+++ b/tipos.html
@@ -22,8 +22,26 @@
       <main>
 
         <section class="conteudo">
-          <h2>titulo</h2>
-          <p>conteudo</p>
+          <h2>Quais são os tipos?</h2>
+          <p>Existem vários tipos de vírus de computador, cada um projetado para cumprir uma tarefa. Alguns dos tipos mais comuns de vírus de computador incluem:</p>
+          <ul>
+            <li>vírus de arquivo: São aqueles que visam infectar certos arquivos em seu computador. Eles geralmente se espalham através de downloads de arquivos infectados ou anexos de e-mail.</li>
+            <li>Vírus de script: Estes programas maliciosos, que são geralmente propagados através de sites infectados, são escritos em linguagens de script como o JavaScript.</li>
+            <li>Vírus de E-mail: Pode se espalhar quando um usuário abre um anexo infectado, geralmente sendo por e-mails, assim o nome.</li>
+            <li>Vírus de cavalo de Tróia: Estes programas maliciosos que se mascaram como software seguro são na verdade um vírus. Pessoas mal-informadas frequentemente abaixam estes, abrindo portas de backdoor para o atacante.</li>
+            <li>Ransomware: Estes vírus são projetados para criptografar arquivos em um computador e exigir que o usuário pague um resgate para recuperar seus dados.</li>
+          </ul>
+          <p>Estes são apenas alguns exemplos dos tipos de vírus que existem. É importante lembrar que os cibercriminosos estão constantemente criando novos tipos de vírus para evitar a detecção e maximizar seus lucros.</p>
+
+          <ul>
+            <li>Hacking que é feito de forma ética também é referido como hacking de "white hat" porque é feito com o consentimento do alvo e em seu melhor interesse. Para avaliar a segurança de um sistema, encontrar fraquezas e fornecer sugestões de melhoria, as empresas usam hackers éticos.</li>
+          <li>Hacking "black hat", também conhecido como hacking malicioso, oposto do "white hat", é uma espécie de hacking realizado sem autorização e com motivos mal intencionados. Os hackers de "black hat'" invadem sistemas de computadores para roubar dados, causar danos ou realizar crimes. Esse é o tipo que focaremos em nosso site.</li>
+          <li>Phishing: Phishing é um método de hacking em que e-mails falsos ou sites são feitos para parecer genuínos, a fim de enganar as pessoas a divulgar informações pessoais como nomes de usuário, senhas ou detalhes de cartão de crédito.</li>
+        </ul>
+
+        <p>Diferente dos vírus, o hacking pode ser feito de maneira etica e legal. Nem todo hacker é um criminoso, como mensionado no topico acima, os "white hat" hackers ajudam empresas e detectam erros de segurança.</p>
+        <p>porém nesse site focaremos nos hackers que possuem intenções maliciosas.</p>
+          
         </section>
 
       </main>
