--- a/proteger.html
+++ b/proteger.html
@@ -22,8 +22,19 @@
       <main>
 
         <section class="conteudo">
-          <h2>titulo</h2>
-          <p>conteudo</p>
+          <h2>Solução?/h2>
+          <p>Uma simples mas efetiva solução é simplesmente informar o máximo de pessoas possível a serem atentas com o que cliquem, o que abaixam ou o que compartilham online, até mesmo pessoalmente, não compartilhar senhas ou informações privadas.
+            Outra solução para deixar seu dispositivo seguro é simplesmente instalar um antivírus confiável, isso ajuda proteger seu sistema contra ameaças normalmente despercebidas.
+            Muitos caem nos ataques simplesmente pelo desatento, então nunca compartilhe suas informações com sites suspeitos e sempre verifique seu dispositivo. </p>
+
+            <p>Porém, se sua maquina já estiver infectada não se preucupe! Não esta tudo perdido.</p>
+            <p>Algumas maneiras para livrar do vírus e hacking são:</p>
+
+            <ul>
+              <li>Executar uma verificação de vírus, sua maquina provavelmente já tem um antivirus instalado.</li>
+              <li>Atualize seu aparelho, o software pode ter ajustado as medidas de segurança. isso pode ajudar a combater a infecção.</li>
+              <li>Se você acha que não vai conseguir remover o programa malicioso, é melhor procurar por ajuda profissional.</li>
+            </ul>
         </section>
 
       </main>
