--- a/oquesao.html
+++ b/oquesao.html
@@ -25,6 +25,9 @@
           <h2>O que são?</h2>
           <p>Os vírus são programas de computador maliciosos que se propagam por meio de arquivos infectados, causando danos ao sistema infectado e potencialmente se espalhando para outros dispositivos. Por outro lado, o hacking refere-se à prática de explorar vulnerabilidades em sistemas de computador para acessar informações ou controlar o sistema de maneira não autorizada.
             Embora existam muitas diferenças entre esses dois conceitos, eles estão intimamente relacionados na medida em que os hackers frequentemente usam vírus e outros tipos de malware para infectar sistemas e obter acesso não autorizado. O hacking pode ser realizado por várias razões, desde fins maliciosos, como roubo de dados ou danos a sistemas, até para fins de pesquisa de segurança ou testes de penetração. Em todos os casos, é essencial estar ciente das ameaças representadas pelos vírus e hackers e tomar medidas para proteger sistemas e informações importantes.</p>
+            <h2>Como surgiram?</h2>
+            <p>Bem, o primeiro vírus é considerado o creeper, criado por Bob Thomas em 1971, o Creeper era um programa experimental que se espalhava através da ARPANET, uma rede de computadores precursora da Internet. O programa exibia a mensagem "I'm the creeper: catch me if you can" na tela dos computadores infectados. O Creeper não causava danos aos sistemas infectados, mas foi o primeiro exemplo de um programa que se espalhava automaticamente através de uma rede de computadores.</p>
+            <p>Porém, o primeiro vírus a causar danos foi o Elk Cloner, criado por Rich Skrenta em 1982 para infectar computadores Apple II. O Elk Cloner não se espalhou muito além das comunidades de usuários do Apple II, mas essa foi a base para vírus muito mais maliciosos.</p>
         </section>
 
       </main>
